--- a/views/district/index.erb
+++ b/views/district/index.erb
@@ -1,16 +1,6 @@
-<html>
-<head>
-  <meta charset='utf-8'>
-  <title><%= "#{district_name}" %> Info</title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-</head>
-<body>
+<%= File.read("./views/template_parts/header.erb") %>
+<%= File.read("./views/template_parts/nav.erb") %>
   <h1>Welcome to the Headcount Analyst page for <%= "#{district_name}" %></h1>
-  <a href="../index.html">back to main page</a>
-  <p>or you can view information about this district:</p>
   <table>
     <tr>
       <th>Enrollment</th>
@@ -23,7 +13,4 @@
       <td><a href='/districts/<%= "#{district_slug}" %>/economic.html'>Economic Profile</a></td>
     </tr>
   </table>
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</body>
-</html>
+<%= File.read("./views/template_parts/footer.erb") %>
