--- a/views/template_parts/nav.erb
+++ b/views/template_parts/nav.erb
@@ -1,3 +1,16 @@
-<h1>Welcome to the Headcount Analyst.</h1>
-<a href="/headcount-analyst.html">View Headcount Dashboard</a>
-<p>or you can view information by district:</p>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Headcount Analyst</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-left">
+        <li><a href="/">All Districts</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div class="container-fluid">
+  <div class="jumbotron">
+     <div class="row">
+        <!-- <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main"> -->
