--- a/views/district/testing.erb
+++ b/views/district/testing.erb
@@ -9,13 +9,13 @@
     <div class="col-sm-4">
       <div class="panel panel-primary">
         <div class="panel-heading">3rd Grade Proficiency by Grade</div>
-        <div class="panel-body"><canvas id="grade-3-proficiency-by-grade" width="400" height="400"></canvas><br/>[Bar]</div>
+        <div class="panel-body"><canvas id="grade-3-proficiency-by-grade" width="400" height="400"></canvas></div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="panel panel-primary">
         <div class="panel-heading">8th Grade Proficiency by Grade</div>
-        <div class="panel-body"><canvas id="grade-8-proficiency-by-grade" width="400" height="400"></canvas><br/>[Bar]</div>
+        <div class="panel-body"><canvas id="grade-8-proficiency-by-grade" width="400" height="400"></canvas></div>
       </div>
     </div>
     <div class="col-sm-4">
@@ -28,24 +28,58 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <script>
     <% grade_3_by_years_labels = data[:d_3_by_years].keys.map(&:to_s) %>
-    <% grade_3_by_years_data = data[:d_3_by_years].values %>
-    var grade_3_by_years = document.getElementById("k-part-by-year");
+    <% grade_3_by_years_math_data = data[:d_3_by_years_math] %>
+    <% grade_3_by_years_reading_data = data[:d_3_by_years_reading] %>
+    <% grade_3_by_years_writing_data = data[:d_3_by_years_writing] %>
+    var grade_3_by_years = document.getElementById("grade-3-proficiency-by-grade");
     var grade_3_by_years_data = {
         labels: <%= grade_3_by_years_labels %>,
         datasets: [{
-                label: "Scores for 3rd Grade by Year",
+                label: "Math",
                 backgroundColor:'rgba(54, 162, 235, 0.2)',
-                    // 'rgba(255, 99, 132, 0.2)',
-                    // 'rgba(255, 206, 86, 0.2)',
-                    // 'rgba(75, 192, 192, 0.2)',
-                    // 'rgba(153, 102, 255, 0.2)',
-                    // 'rgba(255, 159, 64, 0.2)'
-                data: <%= grade_3_by_years_data %>
+                data: <%= grade_3_by_years_math_data %>
+            },
+            {
+                label: "Reading",
+                backgroundColor:'rgba(255, 99, 132, 0.2)',
+                data: <%= grade_3_by_years_reading_data %>
+            },
+            {
+                label: "Writing",
+                backgroundColor:'rgba(255, 206, 86, 0.2)',
+                data: <%= grade_3_by_years_writing_data %>
             }]
     };
     var my3rdGradeByYears = new Chart(grade_3_by_years, {
         type: 'bar',
         data: grade_3_by_years_data
+    });
+    <% grade_8_by_years_labels = data[:d_8_by_years].keys.map(&:to_s) %>
+    <% grade_8_by_years_math_data = data[:d_8_by_years_math] %>
+    <% grade_8_by_years_reading_data = data[:d_8_by_years_reading] %>
+    <% grade_8_by_years_writing_data = data[:d_8_by_years_writing] %>
+    var grade_8_by_years = document.getElementById("grade-8-proficiency-by-grade");
+    var grade_8_by_years_data = {
+        labels: <%= grade_8_by_years_labels %>,
+        datasets: [{
+                label: "Math",
+                backgroundColor:'rgba(54, 162, 235, 0.2)',
+                data: <%= grade_8_by_years_math_data %>
+            },
+            {
+                label: "Reading",
+                backgroundColor:'rgba(255, 99, 132, 0.2)',
+                data: <%= grade_8_by_years_reading_data %>
+            },
+            {
+                label: "Writing",
+                backgroundColor:'rgba(255, 206, 86, 0.2)',
+                data: <%= grade_8_by_years_writing_data %>
+            }]
+    };
+    var my8thGradeByYears = new Chart(grade_8_by_years, {
+        type: 'bar',
+        data: grade_8_by_years_data
     });
   </script>
 <%= File.read("./views/template_parts/footer-charts.erb") %>
