--- a/views/district/testing.erb
+++ b/views/district/testing.erb
@@ -2,7 +2,7 @@
 <%= File.read("./views/template_parts/nav.erb") %>
   <h2 class="sub-header">Statewide Testing Information for <%= "#{district_name}" %></h2>
   <p>
-    <a type="button" class="btn btn-default" href='/districts/<%= "#{district_slug}" %>/index.html'>Back to district main page</a>
+    <a type="button" class="btn btn-default" href='../../index.html'>Back to district main page</a>
   </p>
 
   <div class="row">
