--- a/views/template_parts/nav.erb
+++ b/views/template_parts/nav.erb
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Headcount Analyst</a>
+      <a class="navbar-brand" href="https://iamchrissmith.io/headcount/">Headcount Analyst</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="/">All Districts</a></li>
+        <li><a href="https://iamchrissmith.io/headcount/">All Districts</a></li>
       </ul>
     </div>
   </div>
